# lib_posix_optional

./: CMakeLists.txt  README.md  config.cmake  generate-flags.sh  uninstall.sh
include/p101_posix_optional/: p101_aio.h  p101_fcntl.h  p101_mqueue.h  p101_pthread.h  p101_sched.h  p101_spawn.h  p101_stdlib.h  p101_time.h
include/p101_posix_optional/sys/: p101_mman.h
src/: aio.c  pthread.c  sched.c  spawn.c  stdlib.c
src/sys/: mman.c
